<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context="com.pronoymukherjee.calculator_beta1.TutorialActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tutorial_heading"
        android:textAlignment="center"
        android:id="@+id/heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squareRoot_heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/sqHeading"
        app:layout_constraintTop_toBottomOf="@id/heading"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sq_4"
        android:id="@+id/sq"
        app:layout_constraintStart_toEndOf="@id/sqHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cubeHeading"
        android:id="@+id/cube_heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/sqHeading"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/cq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cq_8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toEndOf="@id/cube_heading"
        app:layout_constraintTop_toBottomOf="@id/sq"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigo_Heading"
        android:id="@+id/trigoHeading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/cube_heading"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/trigoExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_45_cos_90"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toEndOf="@id/trigoHeading"
        app:layout_constraintTop_toBottomOf="@id/cq"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>
