<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="top|right"
            android:hint="@string/hint"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ansButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e96161"
                android:backgroundTint="#ea8484"
                android:clickable="false"
                android:text="@string/button1"
                android:textAlignment="center"
                android:textColor="#fcfbfb"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#74e0e4"
                android:text="@string/button2"
                android:textAlignment="center"
                android:textColor="#0b0a0a" />

            <Button
                android:id="@+id/mem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#44bcc5"
                android:text="@string/button3"
                android:textAlignment="center"
                android:textColor="#fefcfc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ansTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#1a82e4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/memTitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1a82e4"
            android:textColorHighlight="#fcfcfc"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="65dp"
                android:gravity="center"
                android:text="@string/endTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3295e1"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
